# pydexcom

./: .gitignore  __main__.py  pyproject.toml  setup.cfg  setup.py
pydexcom/: __init__.py  const.py
